// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordWrap renders 0 1`] = `
Array [
  .c0 {
  word-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders function 1`] = `
Array [
  .c0 {
  word-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders invalid theme path 1`] = `
Array [
  .c0 {
  word-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders negative number 1`] = `
Array [
  .c0 {
  word-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  word-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-wrap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  word-wrap: July;
}

@media May {
  .c0 {
    word-wrap: August;
  }
}

@media April {
  .c0 {
    word-wrap: September;
  }
}

@media January {
  .c0 {
    word-wrap: November;
  }
}

@media April {
  .c0 {
    word-wrap: August;
  }
}

@media June {
  .c0 {
    word-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: July;
}

@media May {
  .c0 {
    word-wrap: August;
  }
}

@media April {
  .c0 {
    word-wrap: September;
  }
}

@media January {
  .c0 {
    word-wrap: November;
  }
}

@media April {
  .c0 {
    word-wrap: August;
  }
}

@media June {
  .c0 {
    word-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-wrap: November;
  }
}

@media April {
  .c0 {
    word-wrap: January;
  }
}

@media January {
  .c0 {
    word-wrap: December;
  }
}

@media April {
  .c0 {
    word-wrap: April;
  }
}

@media June {
  .c0 {
    word-wrap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-wrap: November;
  }
}

@media April {
  .c0 {
    word-wrap: January;
  }
}

@media January {
  .c0 {
    word-wrap: December;
  }
}

@media April {
  .c0 {
    word-wrap: April;
  }
}

@media June {
  .c0 {
    word-wrap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    word-wrap: July;
  }
}

@media April {
  .c0 {
    word-wrap: August;
  }
}

@media January {
  .c0 {
    word-wrap: September;
  }
}

@media April {
  .c0 {
    word-wrap: November;
  }
}

@media June {
  .c0 {
    word-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-wrap: July;
  }
}

@media April {
  .c0 {
    word-wrap: August;
  }
}

@media January {
  .c0 {
    word-wrap: September;
  }
}

@media April {
  .c0 {
    word-wrap: November;
  }
}

@media June {
  .c0 {
    word-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-wrap: January;
  }
}

@media April {
  .c0 {
    word-wrap: December;
  }
}

@media January {
  .c0 {
    word-wrap: April;
  }
}

@media April {
  .c0 {
    word-wrap: May;
  }
}

@media June {
  .c0 {
    word-wrap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-wrap: January;
  }
}

@media April {
  .c0 {
    word-wrap: December;
  }
}

@media January {
  .c0 {
    word-wrap: April;
  }
}

@media April {
  .c0 {
    word-wrap: May;
  }
}

@media June {
  .c0 {
    word-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders postitive number 1`] = `
Array [
  .c0 {
  word-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders string 1`] = `
Array [
  .c0 {
  word-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordWrap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wordWrap renders valid theme path 1`] = `
Array [
  .c0 {
  word-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
